--- a/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork.csproj
@@ -180,12 +180,19 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\cerulean.css" />
+    <Content Include="Content\cerulean.min.css" />
+    <Content Include="Content\elements.css" />
+    <Content Include="Content\font-awesome.min.css" />
+    <Content Include="Content\Images\close.png" />
+    <Content Include="Content\Images\link.png" />
+    <Content Include="Content\Images\minus.png" />
+    <Content Include="Content\Images\plus.png" />
+    <Content Include="Content\Images\reset.png" />
+    <Content Include="Content\Site.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
