--- a/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork.csproj
@@ -177,6 +177,35 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Hubs\ChatHub.cs" />
+    <Compile Include="Migrations\201601141011568_InitialCreate.cs" />
+    <Compile Include="Migrations\201601141011568_InitialCreate.Designer.cs">
+      <DependentUpon>201601141011568_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201601181321264_AddNames.cs" />
+    <Compile Include="Migrations\201601181321264_AddNames.Designer.cs">
+      <DependentUpon>201601181321264_AddNames.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201601311039262_UpdatedMessageModel.cs" />
+    <Compile Include="Migrations\201601311039262_UpdatedMessageModel.Designer.cs">
+      <DependentUpon>201601311039262_UpdatedMessageModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201602012125299_AddedConversationModel.cs" />
+    <Compile Include="Migrations\201602012125299_AddedConversationModel.Designer.cs">
+      <DependentUpon>201602012125299_AddedConversationModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201602032122203_UpdatedTheWholeSchema.cs" />
+    <Compile Include="Migrations\201602032122203_UpdatedTheWholeSchema.Designer.cs">
+      <DependentUpon>201602032122203_UpdatedTheWholeSchema.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201602150948249_AddedResourceModel.cs" />
+    <Compile Include="Migrations\201602150948249_AddedResourceModel.Designer.cs">
+      <DependentUpon>201602150948249_AddedResourceModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201602171042268_AddedURLModel.cs" />
+    <Compile Include="Migrations\201602171042268_AddedURLModel.Designer.cs">
+      <DependentUpon>201602171042268_AddedURLModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -262,6 +291,29 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201601141011568_InitialCreate.resx">
+      <DependentUpon>201601141011568_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201601181321264_AddNames.resx">
+      <DependentUpon>201601181321264_AddNames.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201601311039262_UpdatedMessageModel.resx">
+      <DependentUpon>201601311039262_UpdatedMessageModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201602012125299_AddedConversationModel.resx">
+      <DependentUpon>201602012125299_AddedConversationModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201602032122203_UpdatedTheWholeSchema.resx">
+      <DependentUpon>201602032122203_UpdatedTheWholeSchema.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201602150948249_AddedResourceModel.resx">
+      <DependentUpon>201602150948249_AddedResourceModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201602171042268_AddedURLModel.resx">
+      <DependentUpon>201602171042268_AddedURLModel.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
