--- a/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork.csproj
@@ -235,22 +235,22 @@
     <Compile Include="Migrations\201602171042268_AddedURLModel.Designer.cs">
       <DependentUpon>201602171042268_AddedURLModel.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201602231512352_AddedFilesStorageFolderModel.cs" />
-    <Compile Include="Migrations\201602231512352_AddedFilesStorageFolderModel.Designer.cs">
-      <DependentUpon>201602231512352_AddedFilesStorageFolderModel.cs</DependentUpon>
+    <Compile Include="Migrations\201602231904243_AddedFileModel.cs" />
+    <Compile Include="Migrations\201602231904243_AddedFileModel.Designer.cs">
+      <DependentUpon>201602231904243_AddedFileModel.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\Conversation.cs" />
-    <Compile Include="Models\FilesStorageFolder.cs" />
+    <Compile Include="Models\File.cs" />
     <Compile Include="Models\Message.cs" />
     <Compile Include="Models\Resource.cs" />
     <Compile Include="Models\URL.cs" />
     <Compile Include="Models\UserToConversationLink.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Implementations\ConversationRepository.cs" />
-    <Compile Include="Repositories\Implementations\FolderRepository.cs" />
+    <Compile Include="Repositories\Implementations\FileRepository.cs" />
     <Compile Include="Repositories\Implementations\LinkRepository.cs" />
     <Compile Include="Repositories\Implementations\MessageRepository.cs" />
     <Compile Include="Repositories\Implementations\Repository.cs" />
@@ -258,7 +258,7 @@
     <Compile Include="Repositories\Implementations\URLRepository.cs" />
     <Compile Include="Repositories\Implementations\UserRepository.cs" />
     <Compile Include="Repositories\Interfaces\IConversationRepository.cs" />
-    <Compile Include="Repositories\Interfaces\IFolderRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IFileRepository.cs" />
     <Compile Include="Repositories\Interfaces\ILinkRepository.cs" />
     <Compile Include="Repositories\Interfaces\IMessageRepository.cs" />
     <Compile Include="Repositories\Interfaces\IRepository.cs" />
@@ -629,8 +629,8 @@
     <EmbeddedResource Include="Migrations\201602171042268_AddedURLModel.resx">
       <DependentUpon>201602171042268_AddedURLModel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201602231512352_AddedFilesStorageFolderModel.resx">
-      <DependentUpon>201602231512352_AddedFilesStorageFolderModel.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201602231904243_AddedFileModel.resx">
+      <DependentUpon>201602231904243_AddedFileModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
